--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Trabalhando com Github</h1>
+    <img src="./images/image.png" alt="Imagem de uma camera fotografica animada" >
 </body>
 </html>
 
